# money-tracker-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
fuzz/: auth.py  config.yaml  endpoints.yaml  engine.py  report_schema.json  reporter.py  run_fuzz.py
fuzz/payloads/: common.txt  path_traversal.txt  sql_injection.txt  xss.txt
src/: server.py
src/identity/api/: dto.py  http.py
src/identity/application/: exceptions.py  handlers.py  use_cases.py
src/identity/application/interfaces/: repositories.py  unit_of_work.py
src/identity/domain/: entities.py
src/identity/infrastructure/: http_exceptions.py  token_service.py
src/identity/infrastructure/sqlalchemy/: repository.py  unit_of_work.py
src/libs/authentication/: authentication_client.py
src/libs/constants/: database.py
src/libs/constants/environment/: authentication.py  database.py  identity.py
src/libs/database/: __init__.py  engine.py  pre_initialized.py  sessions.py
src/libs/database/migrations/: env.py  script.py.mako
src/libs/message_bus/: __init__.py  message_bus.py  pre_initialized.py
src/libs/utils/: __init__.py  datetime_utils.py  environ.py  hashing.py
src/libs/utils/hashing/: __init__.py  hashing.py
src/libs/utils/jwt/: __init__.py  exceptions.py  jwt_interface.py
src/modules/accounts/api/: dto.py  http.py
src/modules/accounts/application/: commands.py  event_handlers.py  exceptions.py  handlers.py  use_cases.py
src/modules/accounts/domain/: entities.py
src/modules/accounts/infrastructure/: orm_models.py
src/modules/budgets/api/: dto.py  (+1 more)
(+108 files in other folders)
